src/objects/Compliance_Review__c.object
<CustomObject>
    <description>Represents a call listened to and reviewed by the Sales QA &amp; Compliance team</description>
    <fields>
        <fullName>ALC_Did_rep_understand_how_LZ__c</fullName>
        <inlineHelpText>Did rep acquire the necessary points to understand how LZ can assist? (ex. state, type filling, prof, etc...)</inlineHelpText>
        <label>Did rep understand how LZ can assist?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALC_Possible_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Possible Points</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALC_Score_Label__c</fullName>
        <formula>IF(ALC_Possible_Score__c = 0,&quot;&quot;,
IF(ALC_Score__c/ALC_Possible_Score__c &lt; 0.33,&quot;Poor&quot;, IF(ALC_Score__c/ALC_Possible_Score__c &lt;= 0.65, &quot;Weak&quot;, IF(ALC_Score__c/ALC_Possible_Score__c &lt;= 0.9, &quot;Good&quot;,
IF(ALC_Score__c/ALC_Possible_Score__c &lt;= 1, &quot;Excellent&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALC_Score__c</fullName>
        <formula>IF(ISPICKVAL(ALC_Were_all_customer_concerns_addressed__c,&quot;Yes&quot;), 8, 0)+
IF(ISPICKVAL(ALC_Did_rep_understand_how_LZ__c, &quot;Yes&quot;), 7, 0) + 
IF(ISPICKVAL(ALC_Validate_customers_understanding__c,&quot;Yes&quot;), 5,0) + 
IF(ISPICKVAL(ALC_Was_information_provided_accurate__c, &quot;Yes&quot;), 13,0)+
IF(ISPICKVAL(ALC_Was_information_provided_complete__c, &quot;Yes&quot;), 7,0)</formula>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALC_Validate_customers_understanding__c</fullName>
        <inlineHelpText>Validate customers understanding (confirmation, recap, or based on customer&apos;s response)</inlineHelpText>
        <label>Validate customers understanding?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALC_Was_information_provided_accurate__c</fullName>
        <inlineHelpText>Was information provided accurately? (LZ or State)</inlineHelpText>
        <label>Was information provided accurately?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALC_Was_information_provided_complete__c</fullName>
        <inlineHelpText>Was information provided complete? (LZ or State)</inlineHelpText>
        <label>Was information provided complete?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALC_Were_all_customer_concerns_addressed__c</fullName>
        <inlineHelpText>Were all customer expressed issues, inquiries, and concerns addressed? (can be determined by response)</inlineHelpText>
        <label>Were all customer concerns addressed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Retention_Service_Violation_Notes__c</fullName>
        <label>AS Retention Service Issue Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_Retention_Violations__c</fullName>
        <formula>IF(
  OR(
    ISPICKVAL(Not_Aggressive__c, &apos;No&apos;),
    ISPICKVAL(Did_Not_Refuse_a_Refund__c, &apos;No&apos;),
    ISPICKVAL(Did_Not_Refuse_to_Cancel__c, &apos;No&apos;),
    ISPICKVAL(Did_not_offer_a_refund_or_30_day_trial__c, &apos;No&apos;)
  ),
  1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AS Retention Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVB_Score_Label__c</fullName>
        <formula>IF(Added_value_total_Possible_Points__c= 0,&quot;&quot;,
IF(Score_Added_Value_Behaviors__c/Added_value_total_Possible_Points__c&lt; 0.33,&quot;Poor&quot;, IF(Score_Added_Value_Behaviors__c/Added_value_total_Possible_Points__c&lt;= 0.65, &quot;Weak&quot;, IF(Score_Added_Value_Behaviors__c/Added_value_total_Possible_Points__c&lt;= 0.9, &quot;Good&quot;,
IF(Score_Added_Value_Behaviors__c/Added_value_total_Possible_Points__c&lt;= 1, &quot;Excellent&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accuracy_of_info_LZ_Score__c</fullName>
        <formula>Violation_Cal_Possible_A6__c *  Violation_Score_Convert_A6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accuracy of info (LZ) Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Added_value_total_Possible_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Possible Points</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmISalesManager__c</fullName>
        <formula>IF(
  $User.Id ==  Sales_Rep_Manager__c,
  true,
  false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AmISalesManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answered_Questions__c</fullName>
        <label>Answered Questions?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicable_Questions__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Answered_Questions__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Courteous__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Defined_Didnt_Omit_LZ_Services__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Did_not_offer_a_refund_or_30_day_trial__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Did_Not_Overstate_LZ_Statistics__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Did_not_provide_advice_or_recommendation__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Did_Not_Provide_Unauthorized_Discounts__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Did_Not_Refuse_a_Refund__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Did_Not_Refuse_to_Cancel__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Inoffensive_Non_Abrasive__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Not_Aggressive__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(OB_Disclaimer_Provided__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Professional__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Provided_accurate_core_product_info__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Provided_accurate_Product_Information__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Provided_Services_Best_of_Ability__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(SBR_information_was_accurately_provided__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Security_Verified__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Specific_Tax_Forms_Not_Recommended__c, &apos;N/A&apos;)), 1, 0)
+
IF(NOT(ISPICKVAL(Taxation_Outcomes_Not_Implied__c, &apos;N/A&apos;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Areas_needing_Improvement__c</fullName>
        <label>Areas needing Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Areas_of_Strength__c</fullName>
        <label>Areas of Strength</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asked_sales_related_questions__c</fullName>
        <inlineHelpText>State &amp; TAT do not count</inlineHelpText>
        <label>Asked sales related questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Sales_Approval_Date_Time__c</fullName>
        <label>Awaiting Sales Approval Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Blank_Value__c</fullName>
        <label>Blank Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCS_2nd_Disclaimer_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCS 2nd Disclosure Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCS_Corrective_Plan_2nd_Disclaimer__c</fullName>
        <label>CCS Corrective Plan 2nd Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Corrective_Plan_Disclaimer__c</fullName>
        <label>CCS Corrective Plan Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Corrective_Plan_Security__c</fullName>
        <label>CCS Corrective Plan Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Corrective_Plan_Taxation__c</fullName>
        <label>CCS Corrective Plan Taxation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Corrective_Plan_UPL_Coaching__c</fullName>
        <label>CCS Corrective Plan UPL Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Corrective_Plan_UPL__c</fullName>
        <label>CCS Corrective Plan UPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Disclaimer_Violation_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCS Disclosure Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCS_Disclaimer_Violation__c</fullName>
        <label>Did agent provide the Disclosure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (1st Contact)</fullName>
                </value>
                <value>
                    <fullName>No (2nd Contact)</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_LCP_2nd_Disclaimer_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCS LCP 2nd Disclosure Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (CCS LCP 2nd Disclaimer Reference)</relationshipLabel>
        <relationshipName>Compliance_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_2nd_Disclaimer_Start_Date__c</fullName>
        <label>CCS LCP 2nd Disclosure Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_2nd_Disclaimer__c</fullName>
        <label>CCS LCP 2nd Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_LCP_Disclaimer_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCS LCP Disclosure Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (CCS LCP Disclaimer Reference)</relationshipLabel>
        <relationshipName>CCS_LCP_Disclaimer_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_Disclaimer_Start_Date__c</fullName>
        <label>CCS LCP Disclosure Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_Disclaimer__c</fullName>
        <label>CCS LCP Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_LCP_Security_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCS LCP Security Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (CCS LCP Security Reference)</relationshipLabel>
        <relationshipName>CCS_LCP_Security_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_Security_Start_Date__c</fullName>
        <label>CCS LCP Security Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_Security__c</fullName>
        <label>CCS LCP Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_LCP_Taxation_Referenece__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCS LCP Taxation Referenece</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (CCS LCP Taxation Referenece)</relationshipLabel>
        <relationshipName>CCS_LCP_Taxation_Referenece</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_Taxation_Start_Date__c</fullName>
        <label>CCS LCP Taxation Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_Taxation__c</fullName>
        <label>CCS LCP Taxation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_LCP_UPL_Coaching_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCS LCP UPL Coaching Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (CCS LCP UPL Coaching Reference)</relationshipLabel>
        <relationshipName>CCS_LCP_UPL_Coaching_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_UPL_Coaching_Start_Date__c</fullName>
        <label>CCS LCP UPL Coaching Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_UPL_Coaching__c</fullName>
        <label>CCS LCP UPL Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_LCP_UPL_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCS LCP UPL Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (CCS LCP UPL Reference)</relationshipLabel>
        <relationshipName>CCS_LCP_UPL_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_UPL_Start_Date__c</fullName>
        <label>CCS LCP UPL Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCS_LCP_UPL__c</fullName>
        <label>CCS LCP UPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Security_Violation_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCS Security Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCS_Security_Violation__c</fullName>
        <label>Did agent fully verify the customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Tax_Violation_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCS Tax Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCS_Tax_Violation__c</fullName>
        <inlineHelpText>Did rep provide tax advice or tax form advice?</inlineHelpText>
        <label>Did agent present a tax related concern?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_UPL_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPL Coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCS_UPL_Violation_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCS UPL Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCS_UPL_Violation__c</fullName>
        <inlineHelpText>UPL Concern
(did rep recommend, advise, provide opinion, etc…)</inlineHelpText>
        <label>Did agent present a UPL Concern?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Written_Warning_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCS Written Warning Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCS_Written_Warning_Reference__c</fullName>
        <label>CCS Written Warning Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CH_Score_Label__c</fullName>
        <formula>IF(Sales_Call_Handling_Total_Possible_Score__c= 0,&quot;&quot;, 
IF(Sales_Call_Handling_Score__c/Sales_Call_Handling_Total_Possible_Score__c&lt; 0.33,&quot;Poor&quot;, IF(Sales_Call_Handling_Score__c/Sales_Call_Handling_Total_Possible_Score__c&lt;= 0.65, &quot;Weak&quot;, IF(Sales_Call_Handling_Score__c/Sales_Call_Handling_Total_Possible_Score__c&lt;= 0.9, &quot;Good&quot;, 
IF(Sales_Call_Handling_Score__c/Sales_Call_Handling_Total_Possible_Score__c&lt;= 1, &quot;Excellent&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Unethical_Business_Practice__c</fullName>
        <label>CP Unethical Business Practice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CP_Written_Warning_Number_Formula__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;ScoredBased&quot; || RecordType.DeveloperName = &quot;Training&quot;, 
IF( UPL_Violation__c = True || Disclaimer_Violation__c = True || Unethical_Business_Practice_Violation__c = True, 1, 
IF( 
(Customer_Verification_Violation__c = True &amp;&amp; ( TEXT(LCP_Security__c) = &quot;Verbal&quot; || TEXT(LCP_Security__c) = &quot;1st Written&quot; || TEXT(LCP_Security__c) = &quot;2nd Written&quot; || TEXT(LCP_Security__c) = &quot;Termination&quot; )) 
|| 
( Unauthorized_Discount_Violation__c = True &amp;&amp; ( TEXT( LCP_Discounts__c ) = &quot;Verbal&quot; || TEXT(LCP_Discounts__c ) = &quot;1st Written&quot; || TEXT(LCP_Discounts__c) = &quot;2nd Written&quot; || TEXT(LCP_Discounts__c) = &quot;Termination&quot;)) 
|| 
(Unauthorized_Discount_Violation__c = True &amp;&amp; TEXT(Corrective_Plan_Discounts__c) = &quot;1st Written&quot;) 
|| 
(Tax_Advice_Violation__c = True &amp;&amp; ( TEXT( LCP_Taxation__c ) = &quot;Verbal&quot; || TEXT(LCP_Taxation__c ) = &quot;1st Written&quot; || TEXT(LCP_Taxation__c ) = &quot;2nd Written&quot; || TEXT(LCP_Taxation__c ) = &quot;Termination&quot;)) 
|| 
( Service_Violation__c = True &amp;&amp; ( TEXT( LCP_Service__c ) = &quot;Verbal&quot; || TEXT(LCP_Service__c ) = &quot;1st Written&quot; || TEXT(LCP_Service__c ) = &quot;2nd Written&quot; || TEXT(LCP_Service__c ) = &quot;Termination&quot;)) 
|| 
( X2nd_Contact_Disclaimer_Voilation__c= True &amp;&amp; ( TEXT( LCP_2nd_Contact_Disclaime__c) = &quot;Verbal&quot; || TEXT(LCP_2nd_Contact_Disclaime__c) = &quot;1st Written&quot; || TEXT(LCP_2nd_Contact_Disclaime__c) = &quot;2nd Written&quot; || TEXT(LCP_2nd_Contact_Disclaime__c) = &quot;Termination&quot;)) 
|| 
( Fee_Violation__c= True &amp;&amp; (TEXT(LCP_Fee__c) = &quot;Verbal&quot; || TEXT(LCP_Fee__c) = &quot;1st Written&quot; || TEXT(LCP_Fee__c) = &quot;2nd Written&quot; || TEXT(LCP_Fee__c) = &quot;Termination&quot;)) 
,1,0)), 

IF(RecordType.DeveloperName = &quot;CCS_ScoredBased&quot; || RecordType.DeveloperName = &quot;CCS_Training&quot;, 

IF(NOT(ISPICKVAL(CCS_Corrective_Plan_UPL__c,&quot;&quot;)) || 

NOT(ISPICKVAL( CCS_Corrective_Plan_Disclaimer__c,&quot;&quot;)) || 

(TEXT( CCS_Corrective_Plan_Security__c) = &quot;1st Written&quot; || TEXT(CCS_Corrective_Plan_Security__c) = &quot;2nd Written&quot; || TEXT(CCS_Corrective_Plan_Security__c) = &quot;Termination&quot;) || 

(TEXT( CCS_Corrective_Plan_Taxation__c ) = &quot;1st Written&quot; || TEXT(CCS_Corrective_Plan_Taxation__c ) = &quot;2nd Written&quot; || TEXT(CCS_Corrective_Plan_Taxation__c ) = &quot;Termination&quot;) || 


(TEXT( CCS_Corrective_Plan_UPL_Coaching__c ) = &quot;1st Written&quot; || TEXT(CCS_Corrective_Plan_UPL_Coaching__c) = &quot;2nd Written&quot; || TEXT(CCS_Corrective_Plan_UPL_Coaching__c) = &quot;Termination&quot;) || 


(TEXT( CCS_Corrective_Plan_2nd_Disclaimer__c) = &quot;1st Written&quot; || TEXT(CCS_Corrective_Plan_2nd_Disclaimer__c) = &quot;2nd Written&quot; || TEXT(CCS_Corrective_Plan_2nd_Disclaimer__c) = &quot;Termination&quot;) 

,1,0) 
,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Written Warning Number Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Written_Warning_Number__c</fullName>
        <label>CP Written Warning Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallHandling_A1__c</fullName>
        <label>Rapport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallHandling_A2__c</fullName>
        <label>Tone &amp; Professional Courtesy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallHandling_Cal_Possible_A1__c</fullName>
        <label>CallHandling Cal Possible A1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallHandling_Cal_Possible_A2__c</fullName>
        <label>CallHandling Cal Possible A2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallHandling_Comments_A1__c</fullName>
        <label>Comments</label>
        <length>70000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CallHandling_Comments_A2__c</fullName>
        <label>Comments</label>
        <length>70000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CallHandling_Possible_Score_A1__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Possible Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallHandling_Possible_Score_A2__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Possible Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>